--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "rollup": "^3.12.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-prettier": "^3.0.0",
     "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^4.9.5"
   }
