--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
-    "allowJs": true,
-    "declaration": true
+    "allowJs": true
   }
 }
