chore: rollup module type 관련 설정

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "WYSIWYG Editor",
   "license": "MIT",
   "scripts": {
-    "dev": "rollup -c -w",
-    "build": "rollup -c",
+    "dev": "rollup -c -w --bundleConfigAsCjs",
+    "build": "rollup -c --bundleConfigAsCjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
