--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^4.0.3",
+    "eslint": "^8.33.0",
+    "prettier": "^2.8.3",
     "rollup": "^3.12.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^5.1.1",
