--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.path.json",
   "compilerOptions": {
+    "moduleResolution": "node",
     "outDir": "./dist",
     "module": "es6",
     "target": "es5",
