--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "rollup-plugin-dts": "^5.1.1",
     "rollup-plugin-prettier": "^3.0.0",
     "rollup-plugin-typescript2": "^0.34.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "postcss": "^8.4.21",
+    "rollup-plugin-postcss": "^4.0.2"
   }
 }
