--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^4.0.3",
+    "@rollup/plugin-image": "^3.0.2",
     "eslint": "^8.33.0",
+    "postcss": "^8.4.21",
+    "postcss-url": "^10.1.3",
     "prettier": "^2.8.3",
     "rollup": "^3.12.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-prettier": "^3.0.0",
     "rollup-plugin-typescript2": "^0.34.1",
-    "typescript": "^4.9.5",
-    "postcss": "^8.4.21",
-    "rollup-plugin-postcss": "^4.0.2"
+    "typescript": "^4.9.5"
   }
 }
